@@ -3,6 +3,9 @@ Overview of changes in lightdm 1.1.2
     * Add regression tests for getting the user language and layout
     * Stop accidentally distributing libsystem
     * Fix introspection bindings not containing any methods
+    * lightdm-set-defaults can now set the autologin user
+    * Wait for the VT to become active when switching to avoid a suspected
+      race condition somewhere between LightDM, X, ConsoleKit and the kernel.
 
 Overview of changes in lightdm 1.1.1
 
